--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "googlekeeper",
+	"name": "wordkeeper",
 	"homepage": "https://gskumawat0.github.io/WordKeeper/",
 	"version": "0.1.0",
 	"private": true,
